added fucntion which adds the card to the screen. This will be called once a new card is added

--- a/bookLibrary.html
+++ b/bookLibrary.html
@@ -13,6 +13,15 @@
 </head>
 
 <body>
+<div id="libraryContainer">
+
+
+
+</div>
+
+
+
+
   <script src="bookObjectCreation.js"></script>
 </body>
 </html>
