added some new CSS to make it look nicer.

--- a/bookLibrary.html
+++ b/bookLibrary.html
@@ -9,16 +9,20 @@
   <meta name="" content="">
 
   <link rel="stylesheet" href="bookLibrary.css">
-
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet"> 
 </head>
 
 <body>
+    <h1>Book Library</h1>
+    <div>&nbsp;</div>
     <button id="addNewBookButton">+</button>
+    <div>&nbsp;</div>
     <div id="formContainer" style="display: none;">
         <form id="addBookForm" action=""> 
-            <label for='bookName'>Book Name: </label>
+            <label for='bookName'>Book Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
             <input type='text' id='bookName' name="bookName" required> <br>
-            <label for='authorName'>Author Name: </label>
+            <label for='authorName'>Author Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
             <input type='text' id='authorName' name="authorName" required><br>
             <label for='numberOfPages'>Number of Pages: </label>
             <input type='text' id='numberOfPages' name="numberOfPages" required><br>
