added local storageand some minor hover effects to make it less boring

--- a/bookLibrary.html
+++ b/bookLibrary.html
@@ -16,7 +16,12 @@
 <body>
     <h1>Book Library</h1>
     <div>&nbsp;</div>
-    <button id="addNewBookButton">+</button>
+    <div id="topContainer">
+        <button id="addNewBookButton">+</button>
+        <button id="clearLocal">Clear Local Storage</button>
+    </div>
+
+    
     <div>&nbsp;</div>
     <div id="formContainer" style="display: none;">
         <form id="addBookForm" action=""> 
